turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:62: error: not found: value x
  state = rule(state)(x)(2) 
                      ^Turmite:66: error: not found: value init
		init();
                ^Turmite:93: error: ambiguous reference to overloaded definition,
both method step in class Turmite of type (colors: Array[java.awt.Color])Unit
and  method step in class Turmite of type (colors: Array[java.awt.Color])Unit
match argument types (Array[java.awt.Color])
			step(colors);
                        ^Turmite:52: error: method step is defined twice
  conflicting symbols both originated in file 'plm.runtime199.Turmite'
def step(colors:Array[Color] ) {
    ^